--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/s3-request-presigner": "^3.688.0",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
