--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "redux-persist": "^6.0.0",
+    "redux-persist-transform-expire-in": "^1.1.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
