--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemon": "^3.1.7"
-  }
+  },
+  "engines": {
+  "node": "20.18.1"
+}
 }
