--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "node api/index.js",
     "start": "node api/index.js",
     "build": "npm install && npm install --prefix client && npm run build --prefix client",
-    "postinstall": "npm install -g nodemon"
+    "postinstall": "npm install -g nodemon express"
   },
   "keywords": [],
   "author": "",
