--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "node api/index.js",
     "start": "node api/index.js",
-    "build": "npm install && npm install --prefix client && npm run build --prefix client",
-    "postinstall": "npm install -g nodemon express"
+    "heroku-postbuild": "cd api/client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -27,8 +26,5 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemon": "^3.1.7"
-  },
-  "engines": {
-    "node": "20.18.1"
   }
 }
