--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "node api/index.js",
-    "start": "node api/index.js",
-    "heroku-postbuild": "cd api/client && npm install && npm run build"
+    "heroku-prebuild": "cd api/client && npm install",
+    "heroku-postbuild": "cd api/client && npm run build",
+    "start": "node api/index.js"
   },
   "keywords": [],
   "author": "",
