--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "node api/index.js",
-    "heroku-prebuild": "cd api/client && npm install",
+     "heroku-prebuild": "cd api/client && npm install --include=dev",
     "heroku-postbuild": "cd api/client && npx vite build",
     "start": "node api/index.js"
   },
